--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -10,9 +10,9 @@
 
 \section{Basic information}
 \begin{itemize}
-    \item Title: Senior Postdoctoral Scholar
-    \item Institution: \CIT
-    \item Address: 1200 E. California Blvd., Pasadena, CA 91125 MC104-44
+    \item Title: Assistant Professor of Computational Science \& Engineering
+    \item Institution: \GIT
+    % \item Address: 1200 E. California Blvd., Pasadena, CA 91125 MC104-44
     \item Email: \href{mailto:spencer@caltech.edu}{\texttt{spencer@caltech.edu}}
     \item Website: \href{https://bryngelson-research.com}{\texttt{https://bryngelson-research.com}}
 \end{itemize}
@@ -37,7 +37,8 @@
 \section{Research positions}
 
 \begin{itemize}
-    \item (2018--Present) Senior Postdoctoral Scholar, \CIT, with Tim Colonius
+    \item (2021--Present) Assistant Professor, College of Computing, \GIT
+    \item (2018--2021) Senior Postdoctoral Scholar, \CIT, with Tim Colonius
     \item (2019) Visiting Researcher, \MIT, with Themis Sapsis
     \item (2017--8) Postdoctor Researcher, XPACC, with Carlos Pantano, Dan Bodony, Jon Freund
     \item (2013--7) Graduate Research Fellow, \UIUC, with Jon Freund
@@ -59,6 +60,7 @@
 \subsection{Current}
 
 \begin{itemize}
+    \item Jose Chreim, \CIT
     \item Jean-Sebastien Spratt, \CIT
     \item Ben Stevens, \CIT
     \item Qifan Wang, \CIT
@@ -71,7 +73,7 @@
 \begin{itemize}
     \item David Mittelstein, \CIT, Ph.D. (2020)
     \item Theresa Trummler, TU Munich, Ph.D. (2020)
-    \item Franz O'Meally, Johns Hopkins University, B.S. (2020)
+    \item Franz O'Meally, Johns Hopkins University, B.S. (2020) -- Now: Caltech Ph.D. student
 \end{itemize}
 
 \section{Awards}
