--- a/cv/ref.bib
+++ b/cv/ref.bib
@@ -201,6 +201,27 @@
   abstract = {The rheological behavior of an elastic capsule suspension is studied in a model two-dimensional channel using detailed numerical simulations. As the rest capsule membrane aspect ratio increases, the capsules become increasingly vulnerable to a buckling instability. This buckling behavior is concomitant with a sudden increase in the effective viscosity and a near disappearance of any near-wall capsule-free layer. The microstructure dynamics suggest elongated capsules make significant rotational contributions that disrupt organized flow, as computed by their rotlet capsule-capsule interactions.},
 }
 
+
+@incollection{conference_24,
+  author = {S. H. Bryngelson and T. Colonius},
+  title = {Sub-grid population balance model for cavitating flows},
+  note = {14th Southern California Flow Physics Symposium},
+  year = {2021},
+}
+@incollection{conference_23,
+  author = {M. Rodriguez and S. H. Bryngelson and T. Colonius},
+  title = {Acoustically Induced Bubble Growth with Phase Change},
+  note = {14th Southern California Flow Physics Symposium},
+  year = {2021},
+}
+
+@incollection{conference_22,
+  author = {J.-S. Spratt and M. Rodriguez and S. H. Bryngelson and S. Cao and T. Colonius},
+  title = {Numerical Simulations of Burst-Wave Lithotripsy in an Eulerian Framework},
+  note = {14th Southern California Flow Physics Symposium},
+  year = {2021},
+}
+
 @incollection{conference_1,
 author = {S. H. Bryngelson and T. Colonius},
   title = {A fast-integration-based model for polydisperse bubble cloud dynamics and their two-way-flow coupling},
@@ -270,14 +291,14 @@ author = {S. H. Bryngelson and T. Colonius},
 @incollection{conference_12,
   author = {T. Trummler and K. Schmidmayer and S. H. Bryngelson and T. Colonius},
   title = {Simulations of a collapsing gas bubble above a crevice},
-  note = {SoCal Fluids XIII},
+  note = {13th Southern California Flow Physics Symposium},
   year = {2019},
 }
 
 @incollection{conference_13,
   author = {S. H. Bryngelson and T. Colonius},
   title = {Simulations and acoustics of humpback whale bubble-net feeding},
-  note = {SoCal Fluids XIII},
+  note = {13th Southern California Flow Physics Symposium},
   year = {2019},
 }
 
