--- a/cv/preamble.tex
+++ b/cv/preamble.tex
@@ -25,6 +25,7 @@
 }
 
 
+\newcommand\GIT{\mbox{Georgia Institute of Technology}\xspace}  
 \newcommand\CIT{\mbox{California Institute of Technology}\xspace}  
 \newcommand\MIT{\mbox{Massachusetts Institute of Technology}\xspace}  
 \newcommand\UIUC{\mbox{University of Illinois at Urbana--Champaign}\xspace}  
