--- a/cv/ref.bib
+++ b/cv/ref.bib
@@ -354,13 +354,13 @@ author = {S. H. Bryngelson and T. Colonius},
     abstract = {This work focuses on the mechanical stability of three different capsule-viscous-flow-systems.  Red blood cells, which are often modeled as capsules, can form uniform trains when flowing in narrow confines; however, in less confined environments their flow appears disordered. This time-stationary system is analyzed through a nonmodal stability analysis which includes full coupling between the viscous fluid flow and elastic cell membranes. The linearization is constructed via a complex set of orthogonal small disturbances which are evaluated using boundary integral techniques. Transiently (t -> 0+) and asymptotically (t -> infty) unstable disturbances are identified, with their corresponding growth rates and perturbation conformations depending upon on the flow strength, viscosity ratio between the inner and exterior cell fluids, cell–cell spacing, cell at-rest shape, and vessel diameter. An ellipsoidal capsule subject to homogeneous shear flow is also considered. While this flow configuration is seemingly more simple, the base motion of the capsule is time-dependent, though periodic, rather than steady, requiring an extension of our methods. This capsule flow is known to display different kinematic behavior, depending on the flow strength, membrane material properties, and capsule shape. The stability of the capsule motion has been studied based on empirical observations of simulations; here we build upon these results though a direct stability analysis. Our analysis utilizes Floquet methods, which yields Floquet multipliers that classify the asymptotic stability of the capsule motion, and quantify how viscous dissipation will rapidly damp most disturbances. However, we also identify disturbances that decay slowly, over many periods of the capsules rotating motion, as well as neutrally stable perturbations. The last flow system considered here is a spherical capsule subject to large amplitude oscillatory extensional (LAOE) flow, which is often used to study the rheology and dynamics of complex fluids. Examining soft particles in LAOE is particularly challenging, partially due to the instability of the flow system. We again quantify this stability through linear analysis, here extending the aforementioned Floquet formulation to include nonmodal and intra-period effects. The analysis shows the asymptotic stability of the capsules for all flow descriptions, as defined by the relative flow strength and capsule time scale. Transiently unstable modes are found for all cases, though again their growth saturates quickly. We also identify an intra-period instability to capsule translations, which matches that of a rigid particle, though it does not have finite amplification from period-to-period.},
 }
 
-@unpublished{spratt20,
+@article{spratt21,
     Author = {J.-S. Spratt and M. Rodriguez and K. Schmidmayer and S. H. Bryngelson and J. Yang and C. Franck and T. Colonius},
     Title = {Characterizing viscoelastic materials via ensemble-based data
     assimilation of bubble collapse observations},
-    Note = {arXiv:2008.04410},
-    doi = {2008.04410},
-    file = {spratt-JMPS-20.pdf},
+    journal = {Journal of the Mechanics and Physics of Solids},
+    file = {spratt-JMPS-21.pdf},
+    year = {2021},
     abstract = {Bubble cavitation can induce such strain rates, and the resulting bubble dynamics are sensitive to the material properties. Thus, in principle, these properties can be inferred via measurements of the bubble dynamics. Estrada et al. (2018) demonstrated such bubble-dynamic high-strain-rate rheometry by using least-squares shooting to minimize the difference between simulated and experimental bubble radius histories. We generalize their technique to account for additional uncertainties in the model, initial conditions, and material properties needed to uniquely simulate the bubble dynamics. Ensemble-based data assimilation minimizes the computational expense associated with the bubble cavitation model. We test an ensemble Kalman filter (EnKF), an iterative ensemble Kalman smoother (IEnKS), and a hybrid ensemble-based 4D–Var method (En4D-Var) on synthetic data, assessing their estimations of the viscosity and shear modulus of a Kelvin-Voigt material. Results show that En4D–Var and IEnKS provide better moduli estimates than EnKF. Applying these methods to the experimental data of Estrada et al. (2018) yields similar material property estimates to those they obtained, but provides additional information about uncertainties. In particular, the En4D–Var yields lower viscosity estimates for some experiments, and the dynamic estimators reveal a potential mechanism that is unaccounted for in the model, whereby the viscosity is reduced in some cases due to material damage occurring at bubble collapse.},
 }
 
