--- a/cv/ref.bib
+++ b/cv/ref.bib
@@ -361,6 +361,9 @@ author = {S. H. Bryngelson and T. Colonius},
     journal = {Journal of the Mechanics and Physics of Solids},
     file = {spratt-JMPS-21.pdf},
     year = {2021},
+    volume = {152},
+    pages = {104455},
+    doi = {10.1016/j.jmps.2021.104455},
     abstract = {Bubble cavitation can induce such strain rates, and the resulting bubble dynamics are sensitive to the material properties. Thus, in principle, these properties can be inferred via measurements of the bubble dynamics. Estrada et al. (2018) demonstrated such bubble-dynamic high-strain-rate rheometry by using least-squares shooting to minimize the difference between simulated and experimental bubble radius histories. We generalize their technique to account for additional uncertainties in the model, initial conditions, and material properties needed to uniquely simulate the bubble dynamics. Ensemble-based data assimilation minimizes the computational expense associated with the bubble cavitation model. We test an ensemble Kalman filter (EnKF), an iterative ensemble Kalman smoother (IEnKS), and a hybrid ensemble-based 4D–Var method (En4D-Var) on synthetic data, assessing their estimations of the viscosity and shear modulus of a Kelvin-Voigt material. Results show that En4D–Var and IEnKS provide better moduli estimates than EnKF. Applying these methods to the experimental data of Estrada et al. (2018) yields similar material property estimates to those they obtained, but provides additional information about uncertainties. In particular, the En4D–Var yields lower viscosity estimates for some experiments, and the dynamic estimators reveal a potential mechanism that is unaccounted for in the model, whereby the viscosity is reduced in some cases due to material damage occurring at bubble collapse.},
 }
 
@@ -379,6 +382,7 @@ author = {S. H. Bryngelson and T. Colonius},
     title = {Near-surface dynamics of a gas bubble collapsing above a crevice},
     year = {2020},
     volume = {899},
+    pages = {A16},
     Author = {T. Trummler and S. H. Bryngelson and K. Schmidmayer and S. J. Schmidt and T. Colonius and N. A. Adams},
     journal = {Journal of Fluid Mechanics},
     file = {trummler-JFM-20.pdf},
