updated some papers

--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -12,7 +12,7 @@
 \begin{itemize}
     \item Title: Assistant Professor of Computational Science \& Engineering
     \item Institution: \GIT
-    % \item Address: 1200 E. California Blvd., Pasadena, CA 91125 MC104-44
+    \item Address: S1313 CODA, 756 W Peachtree St NW, Atlanta, GA 30308
     \item Email: \href{mailto:spencer@caltech.edu}{\texttt{spencer@caltech.edu}}
     \item Website: \href{https://bryngelson-research.com}{\texttt{https://bryngelson-research.com}}
 \end{itemize}
@@ -60,12 +60,13 @@
 \subsection{Current}
 
 \begin{itemize}
+    \item Anand Radhakrishnan, \GIT
+    \item Scott Simms, \GIT
     \item Jose Chreim, \CIT
     \item Jean-Sebastien Spratt, \CIT
     \item Ben Stevens, \CIT
     \item Qifan Wang, \CIT
     \item Alexis Charalampopoulos, \MIT
-    \item Esteban Cisneros, \UIUC
 \end{itemize}
 
 \subsection{Past}
